--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.4.0",
+    "html-to-image": "^1.11.11",
     "lucide-react": "^0.460.0",
     "next": "14.2.18",
     "react": "^18",
