--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.4.0",
     "html-to-image": "^1.11.11",
+    "input-otp": "^1.4.1",
     "lucide-react": "^0.460.0",
     "next": "14.2.18",
     "react": "^18",
     "react-countdown": "^2.3.6",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
+    "react-otp-input": "^3.1.1",
     "sass": "^1.81.0",
     "sweetalert2": "^11.14.5",
     "tailwind-merge": "^2.5.4",
