--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-countdown": "^2.3.6",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
+    "react-hot-toast": "^2.4.1",
     "react-otp-input": "^3.1.1",
     "sass": "^1.81.0",
     "sweetalert2": "^11.14.5",
