--- a/package.json
+++ b/package.json
@@ -10,20 +10,28 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "bootstrap-icons": "^1.11.3",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "crypto-random-string": "^5.0.0",
+    "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.4.0",
     "html-to-image": "^1.11.11",
     "input-otp": "^1.4.1",
+    "jose": "^5.9.6",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.460.0",
     "next": "14.2.18",
     "react": "^18",
     "react-countdown": "^2.3.6",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
@@ -35,6 +43,8 @@
     "uuid": "^11.0.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
