--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "ts-node prisma/seed.ts",
+    "prisma:migrate": "npx prisma migrate dev --name dev",
+    "migrate": "prisma migrate dev",
+    "postmigrate": "npx @snaplet/seed sync"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
@@ -23,7 +30,7 @@
     "crypto-random-string": "^5.0.0",
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.4.0",
-    "html-to-image": "^1.11.11",
+    "formidable": "^3.5.2",
     "input-otp": "^1.4.1",
     "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
@@ -44,8 +51,9 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^20",
+    "@types/node": "^20.17.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
@@ -53,6 +61,8 @@
     "postcss": "^8",
     "prisma": "^5.22.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.2"
   }
 }
