--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "seed": "ts-node prisma/seed.ts",
-    "prisma:migrate": "npx prisma migrate dev --name dev",
+    "prisma": "npx prisma migrate dev --name dev",
     "migrate": "prisma migrate dev",
     "postmigrate": "npx @snaplet/seed sync"
   },
@@ -21,6 +21,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bootstrap-icons": "^1.11.3",
@@ -39,7 +40,9 @@
     "react": "^18",
     "react-countdown": "^2.3.6",
     "react-data-table-component": "^7.6.2",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
     "react-otp-input": "^3.1.1",
