--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lucide-react": "^0.460.0",
     "next": "14.2.18",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-countdown": "^2.3.6",
     "react-data-table-component": "^7.6.2",
     "react-datepicker": "^7.5.0",
@@ -47,6 +48,7 @@
     "react-hot-toast": "^2.4.1",
     "react-otp-input": "^3.1.1",
     "sass": "^1.81.0",
+    "styled-components": "^6.1.13",
     "sweetalert2": "^11.14.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
@@ -58,6 +60,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.17.7",
     "@types/react": "^18",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.18",
