--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
@@ -30,7 +32,8 @@
     "clsx": "^2.1.1",
     "crypto-random-string": "^5.0.0",
     "dayjs": "^1.11.13",
-    "embla-carousel-react": "^8.4.0",
+    "embla-carousel-autoplay": "^8.5.1",
+    "embla-carousel-react": "^8.5.1",
     "formidable": "^3.5.2",
     "input-otp": "^1.4.1",
     "jose": "^5.9.6",
