--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,5 @@
+/* eslint-disable react/prop-types */
 {
   "extends": ["next/core-web-vitals", "next/typescript"],
-  "rules": {"@typescript-eslint/no-explicit-any": "off" }
+  "rules": {"@typescript-eslint/no-explicit-any": "off","react/display-name": "off"}
 }
