--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.460.0",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.18",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
