--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,12 @@
     "strict": false,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "esnext",
+    "module": "ESNext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "target": "ES2020",
     "incremental": true,
     "paths": {
       "@/*": ["./src/*"]
